--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "pug": "^3.0.2",
-    "qs": "^6.10.1"
+    "qs": "^6.10.1",
+    "sync-mysql": "^3.0.1"
   }
 }
